add delete events

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -33,6 +33,8 @@ ru:
     name: 'Шашлыки'
     company: 'Хороший программист'
 
+  are_you_sure: 'Вы уверенны?'
+
 # склонение ошибки
   errors:
       one: '%{count} ошибка'
